--- a/manifests/vegeta_w_istio_large_high_concurrent.yaml
+++ b/manifests/vegeta_w_istio_large_high_concurrent.yaml
@@ -7,6 +7,7 @@ metadata:
     sidecar.istio.io/inject: "true"
     sidecar.istio.io/proxyCPU: "5000m"
     sidecar.istio.io/proxyMemory: "1Gi"
+    proxy.istio.io/config: "{'concurrency':'16'}"
 spec:
   containers:
     - name: vegeta
